Issue #SB-3026 fix: dropdown placeholder alignment issue fixed

--- a/src/pages/profile/additional-info/additional-info.scss
+++ b/src/pages/profile/additional-info/additional-info.scss
@@ -20,7 +20,7 @@ additional-info {
         margin-right: 0 !important;
     }
     .item-md.item-label-stacked [item-right] {
-        margin-top: 18px !important;
+        margin-top: 25px !important;
         margin-bottom: 0 !important;
     }
     .item-md [item-right] {
